# Commercial-View

./: .env.example  .env.figma  .env.template  .eslintrc.json  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  1  ABACO_IMPLEMENTATION_DONE.md  API.md  ARCHITECTURE.md  Activate-Project.ps1  BEFORE_AFTER.md  CHANGELOG.md  CHANGES.md  CHECKLIST.md  CODE_CITATIONS.md  COMMIT_AND_MERGE_STATUS.md  COMPLETE_SUCCESS_SUMMARY.md  COMPREHENSIVE_CHECK.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  Clean-Repository.ps1  Commercial-View-Change-Label.md  Commercial-View-PowerShell-Module.ps1  Commercial-View-PowerShell-Setup.ps1  Consolidate-Configs.ps1  DELIVERABLES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT_READY_CONFIRMATION.md  DUPLICATE_PREVENTION.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURES.md  FINAL_CLEANUP_SUCCESS.md  (+243 more)
.github/: CODEOWNERS
abaco-core/: README.md  pyproject.toml
abaco-core/abaco_core/: __init__.py  feature_engineering.py  kpi.py  logging_config.py  metrics_registry.py  payment_logic.py  pricing.py  types.py
abaco_core/: README.md  __init__.py  alerts.py  config.py  example_module.py  feature_engineering.py  gdrive_ingest.py  kpi.py  kpi_calculator.py  logging_config.py  manifest.py  metrics_registry.py  optimizer.py  payment_logic.py  payment_processor.py  pricing.py  pricing_enricher.py  types.py
analysis/: __init__.py  ai_analyzer.py  kpi_calculator.py
commercial_view/: __init__.py  analytics.py  calculator.py  comprehensive_kpis.py  dpd_analysis.py  metrics.py  pricing.py
config/: README.md  __init__.py  abaco_schema_autodetected.json  abaco_schema_config.yml  column_maps.yml  dashboard_config.yaml  dpd_policy.yml  export_config.yml  google_sheets.yml  mcp-servers.md  pricing_config.yml  settings.py
configs/: column_maps.yml  dpd_policy.yml  export_config.yml  figma_config.json  pricing_config.yml  pricing_grid.parquet  pricing_grid.yaml  production.yml  production_config.py
dashboard/: __init__.py  app.py
data/: Abaco - Loan Tape_Collateral_Table (5).csv  Abaco - Loan Tape_Historic Real Payment_Table (7).csv  Abaco - Loan Tape_Historic Real Payment_Table.csv  Abaco - Loan Tape_Loan Data_Table (7).csv  Abaco - Loan Tape_Loan Data_Table.csv  Abaco - Loan Tape_Payment Schedule_Table (7).csv  Abaco - Loan Tape_Payment Schedule_Table.csv  Q4_Targets.csv  README.md  (+9 more)
(+522 files in other folders)
