[project]
name = "abaco-core"
version = "0.1.0"
description = "Core payments, pricing, KPIs, and feature engineering for Abaco."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
