[project]
name = "abaco-core"
version = "0.1.0"
description = "ABACO Core Library - Optimizer, Alerts, and Ingestion"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
ingestion = [
    "google-api-python-client>=2.131.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.33.0",
]
alerts = [
    "requests>=2.32.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["abaco_core*"]
